--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
 venv/
-Tabelas/
+Tabelas/bkp/
+node_modules/
+driver/
+Logs/
+chromedriver.exe
+.mypy_cache/
 __pycache__/
 *.pyc
+*.log
+.env
 senha.txt
