--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,12 @@ Tabelas/bkp/
 node_modules/
 driver/
 Logs/
+Old/
 chromedriver.exe
 .mypy_cache/
 __pycache__/
 *.pyc
 *.log
+*.rar
 .env
 senha.txt
